# surge

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bake.yml  ci.yml  docker.yml  ingest.yml
docs/: make_readme_plots.py
experiments/: .gitignore  baselines_classical.py  ensemble.py  eval.py  eval_c2.py  features.py  finetune.py  finetune_c2.py  models.py  plot_forecast.py  research.json  run.py  run_c2.py
modal_app/: README.md  app.py
runpod/: DEPLOY.md  Dockerfile  README.md  handler.py
scripts/: backfill_eia_load.py  backfill_genmix.py  backfill_weather.py  compare_eia_df.py  deploy_runpod.py  publish_hf.py  rebuild_data_snapshot.py
src/surge/: __init__.py  bas.py  cache.py  cli.py  ingest.py  schemas.py  store.py
src/surge/api/: forecaster.py  live_load.py  main.py  schemas.py
src/surge/scrapers/: __init__.py  asos.py  base.py  caiso.py  eia.py  eia_genmix.py  ercot.py  hrrr.py  ncdc.py  pjm.py
tests/: test_bas.py  test_caiso.py  test_ercot.py  test_hrrr.py  test_live_load.py  test_ncdc.py  test_pjm.py  test_schemas.py  test_store.py
web/playground/: ._next-env.d.ts  next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
web/playground/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/playground/app/api/actuals/: route.ts
web/playground/app/api/bake/: route.ts
web/playground/app/api/eia-forecast/: route.ts
web/playground/app/api/forecast/: route.ts
web/playground/app/api/forecast-all/: route.ts
web/playground/app/api/health/: route.ts
web/playground/app/api/live-load/: route.ts
web/playground/app/grid/: page.tsx
web/playground/components/: ba-card.tsx  ba-grid.tsx  error-banner.tsx  forecast-chart-skeleton.tsx  forecast-chart.tsx  glossary.tsx  grid-map.tsx  playground-app.tsx  playground.tsx  refresh-icon.tsx  swr-provider.tsx  third-party-analytics.tsx  us-demand-hero.tsx
web/playground/components/ui/: button.tsx  map.tsx  select.tsx  slider.tsx
web/playground/lib/: types.ts  us-grid-geo.ts
