[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surge"
version = "0.0.1"
description = "Open forecasts and simulations for the US power grid"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Surge contributors" }]
keywords = ["grid", "energy", "forecasting", "electricity", "iso", "eia"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "pyarrow>=16.0",
    "pydantic>=2.6",
    "tenacity>=9.0",
    "platformdirs>=4.0",
    "tqdm>=4.66",
    "zstandard>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-vcr>=1.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
weather = ["herbie-data>=2024.3", "cdsapi>=0.7"]
cli = ["typer>=0.12", "rich>=13.7"]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    "chronos-forecasting",
    # torch>=2.6: below this version torch.load defaults to
    # weights_only=False, which permits arbitrary code execution when
    # loading a pickled checkpoint. Some chronos variants ship pickled
    # files; pinning >=2.6 forces the safe default.
    "torch>=2.6",
    "holidays>=0.55",
]
all = ["surge[dev,weather,cli,api]"]

[project.scripts]
surge = "surge.cli:app"

[project.urls]
Homepage = "https://github.com/surge-grid/surge"
Repository = "https://github.com/surge-grid/surge"

[tool.hatch.build.targets.wheel]
packages = ["src/surge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
# Not `strict = true` on purpose: scrapers/ and the inference path rely on
# third-party libs without stubs (chronos, holidays, polars expr chains)
# where strict mode would drown real signal in "missing annotation" noise.
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true

# Per-module opt-outs for files that lean heavily on dynamic third-party
# APIs. New code (bas.py, api/schemas.py, tests/) still gets type-checked.
[[tool.mypy.overrides]]
module = [
    "surge.scrapers.*",
    "surge.api.main",
    "surge.api.forecaster",
    "surge.store",
    "surge.cache",
]
ignore_errors = true
